--- a/Server-Side/package.json
+++ b/Server-Side/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "express": "^4.19.2",
     "express-validation": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-pg-migrate": "^6.2.2",
     "nodemon": "^3.1.0",
     "pool": "^0.4.1",
